--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<section>
 				<div class="circle"></div>
 				<header>
-					<a href="#"><img src="./resources/images/logo2.png" class="logo"></a>
+					<a href="#"><img src="logo2.png" class="logo"></a>
 					<div class="toggle"></div>
 					<ul class="navigation">
 						<li><a href="#">Home</a></li>
@@ -31,18 +31,18 @@
 						<!-- Swiper -->
   		<div class="swiper-container">
             <div class="swiper-wrapper">
-		      <div class="swiper-slide"><img src="./resources/images/pic1.jpg"></div>
-		      <div class="swiper-slide"><img src="./resources/images/pic2.jpg"></div>
-		      <div class="swiper-slide"><img src="./resources/images/pic1.jpg"></div>
-		      <div class="swiper-slide"><img src="./resources/images/pic2.jpg"></div>
+		      <div class="swiper-slide"><img src="pic1.jpg"></div>
+		      <div class="swiper-slide"><img src="pic2.jpg"></div>
+		      <div class="swiper-slide"><img src="pic1.jpg"></div>
+		      <div class="swiper-slide"><img src="pic2.jpg"></div>
 		      </div>
 		 </div>
 					</div>
 				</div>
 				<ul class="sci">
-					<li><a href="#"><img src="./resources/images/gmail.png"></a></li>
-					<li><a href="#"><img src="./resources/images/gmail.png"></a></li>
-					<li><a href="#"><img src="./resources/images/gmail.png"></a></li>
+					<li><a href="#"><img src="gmail.png"></a></li>
+					<li><a href="#"><img src="gmail.png"></a></li>
+					<li><a href="#"><img src="gmail.png"></a></li>
 				</ul>
 			</section>
 
